--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
 </head>
 
 <body>
-    <h1>Web Developer</h1>
+    <h1>This is an h1 tag</h1>
+    <h3>This is an h3 tag</h3>
+    <h4 class="h6">This is an h4 tag</h4>
+
+    <h1 class="display-1">One</h1>
+    <h2 class="display-2">Two</h2>
+    <h3 class="display-3">Three</h3>
+    <h4 class="display-4">Four</h4>
+    <h5 class="display-5">Five</h5>
+    <h6 class="display-6">Six</h6>
+
+    <span class="display-3">Span</span>
+
+    <h3>Customized heading <small class="text-muted">With faded text</small></h3>
+
+    <p class="lead">I am different</p>
+
+    <h1><mark>High</mark></h1>
+    <h1><s>Not accurate</s></h1>
+    <h1>
+        <del>Deleted text</del>
+    </h1>
+    <h1></h1>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
