--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h3>This is an h3 tag</h3>
     <h4 class="h6">This is an h4 tag</h4>
 
-    <h1 class="display-1">One</h1>
+    <h1 class="display-1 text-primary" style="opacity: 0.25">One</h1>
     <h2 class="display-2">Two</h2>
-    <h3 class="display-3">Three</h3>
+    <h3 class="display-3 text-success">Three</h3>
     <h4 class="display-4">Four</h4>
-    <h5 class="display-5">Five</h5>
-    <h6 class="display-6">Six</h6>
+    <h5 class="display-5 text-danger">Five</h5>
+    <h6 class="display-6 text-warning bg-dark">Six</h6>
 
     <span class="display-3">Span</span>
 
