--- a/index.html
+++ b/index.html
@@ -1,43 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Web Dev</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-
-<body>
-    <h1>This is an h1 tag</h1>
-    <h3>This is an h3 tag</h3>
-    <h4 class="h6">This is an h4 tag</h4>
-
-    <h1 class="display-1 text-primary" style="opacity: 0.25">One</h1>
-    <h2 class="display-2">Two</h2>
-    <h3 class="display-3 text-success">Three</h3>
-    <h4 class="display-4">Four</h4>
-    <h5 class="display-5 text-danger">Five</h5>
-    <h6 class="display-6 text-warning bg-dark">Six</h6>
-
-    <span class="display-3">Span</span>
-
-    <h3>Customized heading <small class="text-muted">With faded text</small></h3>
-
-    <p class="lead">I am different</p>
-
-    <h1><mark>High</mark></h1>
-    <h1><s>Not accurate</s></h1>
-    <h1>
-        <del>Deleted text</del>
-    </h1>
-    <h1></h1>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-
+	<body>
+		<div class="container my-4">
+			<h2>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
+				adipisci!
+			</h2>
+			<p>
+				Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam voluptates
+				corrupti blanditiis expedita, pariatur, minus explicabo culpa incidunt
+				nihil optio dolore necessitatibus earum molestiae, quam dignissimos
+				consequuntur quo aliquam cum quisquam? Laboriosam repellendus vero
+				fugiat quis debitis, repellat quibusdam est?
+			</p>
+		</div>
+		<div class="container-fluid">
+			<h1>
+				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi
+				ullam illum, nemo quasi aut animi.
+			</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam,
+				fuga veritatis beatae corporis quidem reiciendis adipisci amet iure
+				blanditiis odit consequatur animi obcaecati laudantium illum temporibus
+				nemo, dolor unde error, repellendus totam assumenda impedit! Ex corporis
+				dignissimos totam hic iure, vel repudiandae quae libero necessitatibus
+				esse qui, vitae quas dolorum!
+			</p>
+		</div>
+		<div class="container-lg my-5">
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sint, neque
+				error voluptatem cupiditate iure accusantium ea corrupti ex earum
+				perferendis molestias provident iste minima nemo expedita, enim ipsum
+				ipsa in placeat itaque quibusdam accusamus! Ipsum, eius quasi impedit ab
+				quos quibusdam ipsam nostrum omnis sint quas nemo, dignissimos
+				exercitationem! Quibusdam sunt beatae molestiae. Ipsum nemo cupiditate
+				commodi labore ab atque molestiae expedita eum excepturi doloremque
+				obcaecati dolorem quas laborum aliquid voluptatibus iste, nobis impedit
+				magnam suscipit exercitationem sint consequatur. Dolorem sed minus enim
+				reprehenderit atque expedita animi, tempore quaerat voluptas consequatur
+				itaque. Aut mollitia magni iste eum enim! Quibusdam!
+			</p>
+		</div>
+		<div class="container-xxl my-4">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate ad
+				in sed praesentium, deserunt libero sequi est iure maiores veniam ipsum
+				debitis ipsa autem soluta ullam deleniti ducimus culpa voluptatem.
+			</p>
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
